@@ -1,3 +1,9 @@
+2006-11-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b2
+
+ * Fix: Rotating and flipping.
+
+ * Change: Performing an transpose action with NetPBM now requires 10.13+
+
 2006-11-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b1
 
  * Fix: Check wether an Id was already used in makeFormIntro() 
